include/dss_capi.h

    /*
    Set the Frequency for next solution
    */
    DSS_CAPI_DLL double Solution_Get_Frequency(void);
    /*
    Set Hour for time series solutions.
    */
    DSS_CAPI_DLL int32_t Solution_Get_Hour(void);
    /*
    Number of iterations taken for last solution. (Same as TotalIterations)
    */
    DSS_CAPI_DLL int32_t Solution_Get_Iterations(void);
    /*
    Default load multiplier applied to all non-fixed loads
    */
    DSS_CAPI_DLL double Solution_Get_LoadMult(void);
    /*
    Max allowable iterations.
    */
    DSS_CAPI_DLL int32_t Solution_Get_MaxIterations(void);
    /*
    Set present solution mode (by a text code - see DSS Help)
    */
    DSS_CAPI_DLL int32_t Solution_Get_Mode(void);
    /*
    Number of solutions to perform for Monte Carlo and time series simulations
    */
    DSS_CAPI_DLL int32_t Solution_Get_Number(void);
    /*
    Randomization mode for random variables "Gaussian", "Uniform" or "LogNormal"
    */
    DSS_CAPI_DLL void Solution_Set_Random(int32_t Random);
    /*
    Randomization mode for random variables "Gaussian", "Uniform" or "LogNormal"
    */
    DSS_CAPI_DLL int32_t Solution_Get_Random(void);
    /*
    Seconds from top of the hour.
    */
    DSS_CAPI_DLL double Solution_Get_Seconds(void);
    /*
    Time step size in sec
    */
    DSS_CAPI_DLL double Solution_Get_StepSize(void);
    /*
    Solution convergence tolerance.
    */
    DSS_CAPI_DLL double Solution_Get_Tolerance(void);
    /*
    Set year for planning studies
    */
    DSS_CAPI_DLL int32_t Solution_Get_Year(void);
    /*
    Set the Frequency for next solution
    */
    DSS_CAPI_DLL void Solution_Set_Frequency(double Value);
    /*
    Set Hour for time series solutions.
    */
    DSS_CAPI_DLL void Solution_Set_Hour(int32_t Value);
    /*
    Default load multiplier applied to all non-fixed loads
    */
    DSS_CAPI_DLL void Solution_Set_LoadMult(double Value);
    /*
    Max allowable iterations.
    */
    DSS_CAPI_DLL void Solution_Set_MaxIterations(int32_t Value);
    /*
    Set present solution mode (by a text code - see DSS Help)
    */
    DSS_CAPI_DLL void Solution_Set_Mode(int32_t Mode);
    /*
    Number of solutions to perform for Monte Carlo and time series simulations
    */
    DSS_CAPI_DLL void Solution_Set_Number(int32_t Value);
    /*
    Seconds from top of the hour.
    */
    DSS_CAPI_DLL void Solution_Set_Seconds(double Value);
    /*
    Time step size in sec
    */
    DSS_CAPI_DLL void Solution_Set_StepSize(double Value);
    /*
    Solution convergence tolerance.
    */
    DSS_CAPI_DLL void Solution_Set_Tolerance(double Value);
    /*
    Set year for planning studies
    */
    DSS_CAPI_DLL void Solution_Set_Year(int32_t Value);
    DSS_CAPI_DLL void Solution_Solve(void);
    /*
    ID (text) of the present solution mode
    */
    DSS_CAPI_DLL char* Solution_Get_ModeID(void);
    /*
    Load Model: {PowerFlow (default) | Admittance}
    */
    DSS_CAPI_DLL int32_t Solution_Get_LoadModel(void);
    /*
    Load Model: {PowerFlow (default) | Admittance}
    */
    DSS_CAPI_DLL void Solution_Set_LoadModel(int32_t Value);
    /*
    Load-Duration Curve name for LD modes
    */
    DSS_CAPI_DLL char* Solution_Get_LDCurve(void);
    /*
    Load-Duration Curve name for LD modes
    */
    DSS_CAPI_DLL void Solution_Set_LDCurve(char* Value);
    /*
    Get/Set the Solution.IntervalHrs variable for custom solution algorithms
    */
    DSS_CAPI_DLL void Solution_Set_IntervalHrs(double Value);